<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_with_C"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="end"
        android:orientation="vertical"
        android:weightSum="2">


        <TextView
            android:id="@+id/edit_text_first_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:hint="@string/hint_0"
            android:textColorHint="@android:color/white"
            android:gravity="center|right"
            android:importantForAutofill="no"
            android:textColor="@android:color/white"
            android:textSize="60sp"
            tools:ignore="RtlHardcoded" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:background="@color/view" />

        <TextView
            android:id="@+id/action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center|right"
            android:importantForAutofill="no"
            android:textColor="@android:color/holo_green_light"
            android:textSize="40sp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_with_C"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_with_seven"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:backgroundTint="@color/backgroundOfAction"
            android:fontFamily="@font/montserrat"
            android:text="@string/btn_clear"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/backspace_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:backgroundTint="@color/backgroundOfAction"
            android:fontFamily="@font/montserrat"
            android:text="@string/btn_back_space"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:backgroundTint="@color/backgroundOfAction"
            android:fontFamily="@font/montserrat"
            android:text="@string/btn_percent"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/division_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:backgroundTint="@color/backgroundOfAction"
            android:fontFamily="@font/montserrat"
            android:text="@string/btn_division"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_with_seven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_with_four"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/montserrat"
            android:text="@string/btn_seven"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/eight_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/montserrat"
            android:text="@string/btn_eight"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />


        <Button
            android:id="@+id/nine_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/montserrat"
            android:text="@string/btn_nine"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/multiplication_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/btn"
            android:backgroundTint="@color/backgroundOfAction"
            android:fontFamily="@font/montserrat"
            android:text="@string/btn_multiplication"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_with_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_with_one"
        android:layout_margin="2dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/four_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/montserrat"
            android:text="@string/btn_four"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/five_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/montserrat"
            android:text="@string/btn_five"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/six_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/montserrat"
            android:text="@string/btn_six"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/minus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/montserrat"
            android:backgroundTint="@color/backgroundOfAction"
            android:text="@string/btn_minus"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_with_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_with_zero"
        android:layout_margin="2dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/one_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/montserrat"
            android:text="@string/btn_one"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:weightSum="25"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/two_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/montserrat"
            android:text="@string/btn_two"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/three_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/montserrat"
            android:text="@string/btn_three"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/plus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/montserrat"
            android:backgroundTint="@color/backgroundOfAction"
            android:text="@string/btn_plus"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_with_zero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/push_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/montserrat"
            android:text="@string/btn_push"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/zero_btn_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/montserrat"
            android:text="@string/btn_zero"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/point_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/montserrat"
            android:text="@string/btn_point"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />


        <Button
            android:id="@+id/equals_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/btn"
            android:backgroundTint="@color/backgroundOfAction"
            android:fontFamily="@font/montserrat"
            android:text="@string/btn_equals"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle"/>

    </LinearLayout>
</RelativeLayout>