<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_back"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:background="@color/white"
        android:layout_marginVertical="100dp"
        tools:ignore="NotSibling"
        tools:layout_editor_absoluteX="30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/number"
            app:counterEnabled="true"
            app:counterMaxLength="9"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperText="Введите номер"
            app:helperTextTextColor="#FF0000"
            app:prefixText="+996"
            app:prefixTextColor="@color/purple_200"
            app:startIconDrawable="@drawable/call"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="30dp">

            <EditText
                android:id="@+id/edittext1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:helperText="Введите почту"
            app:helperTextTextColor="#FF0000"
            app:layout_constraintTop_toBottomOf="@+id/editNumber"
            app:startIconDrawable="@drawable/email"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="30dp">

            <EditText
                android:id="@+id/edittext2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/password"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="password_toggle"
            app:helperText="Введите пароль"
            app:helperTextTextColor="#FF0000"
            app:layout_constraintTop_toBottomOf="@+id/editEmail"
            app:startIconDrawable="@drawable/lock"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="30dp">

            <EditText
                android:id="@+id/edittext3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/confirm_password"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="password_toggle"
            app:helperText="Подтвердите пароль"
            app:helperTextTextColor="#FF0000"
            app:layout_constraintTop_toBottomOf="@+id/editPassword"
            app:startIconDrawable="@drawable/lock"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="30dp">

            <EditText
                android:id="@+id/edittext4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/reg"
            android:textColor="#311B92"
            app:layout_constraintTop_toBottomOf="@+id/editConfirmPassword"
            tools:layout_editor_absoluteX="60dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.constraintlayout.widget.ConstraintLayout>


